# core-examples

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt
c/minimal_app/: CMakeLists.txt  app.c  config.json.in
c/spammer/: CMakeLists.txt  spammer.c
cmake/: game-carrier.cmake
include/: gc-client-helper.h  gc-helper.h  gc-posix.h  gc-server-helper.h
lib/: CMakeLists.txt  client.c  print.c  server.c  sha256.c
lib/client/: logging.c
lib/platform/unix/: hrtime.c
lib/platform/win/: hrtime.c
lib/posix/: getopt.c
lib/server/: logging.c
net-core/: net-core.sln
net-core/ConfigPatcher/: ConfigPatcher.csproj  Program.cs
net-core/MinimalApp/: Connection.cs  MinimalApp.cs  MinimalApp.csproj  config.json.in
net-core/Spammer/: ArgParser.cs  Common.cs  Spammer.cs  Spammer.csproj
net-framework/: net-framework.sln
net-framework/ConfigPatcher/: ConfigPatcher.csproj  Program.cs
net-framework/ConfigPatcher/Properties/: AssemblyInfo.cs
net-framework/MinimalApp/: Connection.cs  MinimalApp.cs  MinimalApp.csproj  config.json.in
net-framework/MinimalApp/Properties/: AssemblyInfo.cs
net-framework/Spammer/: ArgParser.cs  Common.cs  Spammer.cs  Spammer.csproj
net-framework/Spammer/Properties/: AssemblyInfo.cs
